--- a/style.css
+++ b/style.css
@@ -2,11 +2,22 @@ body{
     margin:0%;
     padding:0%;
 }
+/*Code for header block*/
 header{
-
+     background-color: coral;
 }
+
 .header-name
 {
     display:inline-block;
+    padding:0.5% 1%;
+}
 
+.header-button{
+    background-color: 0.3;
+    padding:0.5%;
+    margin:1.5% 5%;
+    float: right;
+    border-radius: 5%;
+    
 }
